updated hosted backend url

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-    "BASE_URL": "https://5d17-122-171-23-18.ngrok-free.app",
+    "BASE_URL": "https://d3c9-122-171-23-18.ngrok-free.app",
     "PORT": 5001
 }
