updated hosted backend url

--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-    "BASE_URL": "https://bd7b-14-97-218-70.ngrok-free.app",
+    "BASE_URL": "https://4926-14-97-218-70.ngrok-free.app",
     "PORT": 5001
 }
