--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ beautifulsoup4==4.12.3
 bleach==6.1.0
 blinker==1.8.2
 build==1.2.1
+CacheControl==0.14.1
 cachetools==5.5.0
 certifi==2024.7.4
 cffi==1.17.0
@@ -28,6 +29,7 @@ chromadb==0.5.3
 click==8.1.7
 coloredlogs==15.0.1
 comm==0.2.2
+cryptography==43.0.3
 dataclasses-json==0.6.7
 debugpy==1.8.5
 decorator==5.1.1
@@ -39,11 +41,14 @@ executing==2.0.1
 fastapi==0.112.2
 fastjsonschema==2.20.0
 filelock==3.15.4
+firebase-admin==6.6.0
 Flask==3.0.3
+Flask-Limiter==3.8.0
 flatbuffers==24.3.25
 fqdn==1.5.1
 frozenlist==1.4.1
 fsspec==2024.6.1
+gcloud==0.18.3
 gitdb==4.0.11
 GitPython==3.1.43
 google-ai-generativelanguage==0.6.6
@@ -54,6 +59,7 @@ google-auth-httplib2==0.2.0
 google-cloud-aiplatform==1.64.0
 google-cloud-bigquery==3.25.0
 google-cloud-core==2.4.1
+google-cloud-firestore==2.19.0
 google-cloud-resource-manager==1.12.5
 google-cloud-storage==2.18.2
 google-crc32c==1.5.0
@@ -64,6 +70,7 @@ groq==0.9.0
 grpc-google-iam-v1==0.13.1
 grpcio==1.66.1
 grpcio-status==1.62.3
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
@@ -100,6 +107,7 @@ jupyterlab==4.2.4
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
+jwcrypto==1.5.6
 kubernetes==30.1.0
 langchain==0.2.14
 langchain-chroma==0.1.3
@@ -110,6 +118,7 @@ langchain-groq==0.1.9
 langchain-huggingface==0.0.3
 langchain-text-splitters==0.2.2
 langsmith==0.1.104
+limits==3.13.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
@@ -119,6 +128,7 @@ mistune==3.0.2
 mmh3==4.1.0
 monotonic==1.6
 mpmath==1.3.0
+msgpack==1.1.0
 multidict==6.0.5
 mypy-extensions==1.0.0
 narwhals==1.5.5
@@ -130,6 +140,7 @@ networkx==3.3
 notebook==7.2.1
 notebook_shim==0.2.4
 numpy==1.26.4
+oauth2client==4.1.3
 oauthlib==3.2.2
 onnxruntime==1.19.0
 opentelemetry-api==1.26.0
@@ -142,12 +153,14 @@ opentelemetry-proto==1.26.0
 opentelemetry-sdk==1.26.0
 opentelemetry-semantic-conventions==0.47b0
 opentelemetry-util-http==0.47b0
+ordered-set==4.1.0
 orjson==3.10.7
 overrides==7.7.0
 packaging==24.1
 pandas==2.2.2
 pandocfilters==1.5.1
 parso==0.8.4
+pdfminer.six==20240706
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.2
@@ -163,16 +176,22 @@ pyarrow==17.0.0
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pycparser==2.22
+pycryptodome==3.21.0
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydeck==0.9.1
+pydf==12
 Pygments==2.18.0
+PyJWT==2.9.0
 pyparsing==3.1.4
+pypdf==5.0.1
 PyPika==0.48.9
 pyproject_hooks==1.1.0
+Pyrebase4==4.8.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==2.0.7
+python-jwt==4.1.0
 pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -182,6 +201,7 @@ referencing==0.35.1
 regex==2024.7.24
 requests==2.32.3
 requests-oauthlib==2.0.0
+requests-toolbelt==0.10.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.7.1
@@ -204,6 +224,7 @@ stack-data==0.6.3
 starlette==0.38.2
 streamlit==1.37.1
 streamlit-lottie==0.0.5
+streamlit-on-Hover-tabs==1.0.1
 sympy==1.13.2
 tenacity==8.5.0
 terminado==0.18.1
@@ -223,7 +244,7 @@ typing_extensions==4.12.2
 tzdata==2024.1
 uri-template==1.3.0
 uritemplate==4.1.1
-urllib3==2.2.2
+urllib3==1.26.20
 uvicorn==0.30.6
 uvloop==0.20.0
 watchdog==4.0.2
