--- a/config/config.yaml
+++ b/config/config.yaml
@@ -2,7 +2,7 @@ project:
   id: "wf-gcp-us-estetica2-sbx"
   region: "us-central1"
 google:
-  service_account_file: "etc/secrets/google-keys.json"
+  service_account_file: "config/keys.json"
 llm:
   model: "gemini-1.5-pro"
 cache:
