--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ fastjsonschema==2.20.0
 filelock==3.15.4
 firebase-admin==6.6.0
 Flask==3.0.3
+Flask-Cors==5.0.0
 Flask-Limiter==3.8.0
 flatbuffers==24.3.25
 fqdn==1.5.1
