--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,4 @@
 {
-    "BASE_URL": "https://81b0-122-171-22-159.ngrok-free.app",
+    "BASE_URL": "https://yume-uoz8.onrender.com",
     "PORT": 5001
 }
